--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,15 @@
+= 0.0.5
+ * 2011/01/13
+ * change some options.
+
+= 0.0.4
+ * 2011/01/12
+ * fix bug in xpath query.
+
+= 0.0.3
+ * 2011/01/12
+ * update document.
+
 = 0.0.2
  * 2011/01/12
  * add dependancy on Nokogiri
